--- a/exercises/ex02/ex02.md
+++ b/exercises/ex02/ex02.md
@@ -17,14 +17,23 @@
 intended to do?  What would the output be if the program worked as
 expected?
 
+Expected behavior:
+  - It seems that `stack.c` is intended to print out the contents of the array - which should be `{42, 42, 42, 42, 42}`. 
+
 2.  Compile it.  Do you get a warning?  What does it mean?
+
+  - I get a warning generated that says - `stack.c:23:12: warning: address of stack memory associated with local variable 'array' returned [-Wreturn-stack-address]`. As far as I can tell, this warning is telling me that I'm returning the address of an array that lives on the stack, which is a dangerous thing to do because this memory could be used by someone else as soon as another function is called and its data gets put in the stack, overwriting the data that I was trying to point to. 
 
 3.  Run it.  What happens?  You might get a segmentation fault, or you might get
 some strange output.  Can you explain it?  You might find it
 helpful to draw a stack diagram.
 
+  - When I run it, I don't get a segmentation fault, but I do get some very strange behavior - the printed output of the values at the address in the array I returned are `{0, some_random_value, 0, 0, 0}` - which is not at all what I expected. This is happening because the memory in the stack is being overwritten by other function calls. In fact, when the function `bar` runs, it outputs the same memory address that `foo` pointed to for the array. `bar` is free to modify and mess with the data in these addresses. 
+
 4.  Comment out the `print` statements in `foo()` and `bar()` and run
 it again.  What happens now?
+
+  - When I comment out the `print` statements, I still get the same output. 
 
 5.  Add comments to the code to explain these experiments and the results,
 then check the code in to the repo.
