Update ex02 to link to diagram

--- a/exercises/ex02/ex02.md
+++ b/exercises/ex02/ex02.md
@@ -10,12 +10,19 @@
 
 3. Based on the output, draw a sketch of the virtual address space (see page 80 of HFC).  Show the relative locations of the stack, heap, globals, constants, and code.
 
+![Address space diagram](./ex02diagram.png)
+
+
 4. Add a second call to `malloc` and check whether the heap on your system grows up (toward larger addresses).  
 
 5. Add a function that prints the address of a local variable, and check whether the stack grows down.  
 
+The stack goes down.
+
 6. Choose a random number between 1 and 32, and allocate two chunks with that size.  
 How much space is there between them?  Hint: Google knows how to subtract hexadecimal numbers.
+
+I allocated 12 bytes, and there was 0x10 between them, or 16 bytes. Cool!
 
 
 ### Stack allocated data
