--- a/exercises/ex05/ex05.md
+++ b/exercises/ex05/ex05.md
@@ -21,12 +21,24 @@ by `my_random_float` have the right distribution.
 4) Read through `time_rand.c`, then compile and run it.  Which
 random number generator is the fastest?
 
+```
+246.082000 ms    dummy   <-- fastest                                  
+542.244000 ms    dummy2                                    
+562.259000 ms    random_float                              
+794.267000 ms    my_random_float                           
+1994.858000 ms   my_random_float2                          
+557.519000 ms    random_float
+```
+The dummy generators are the fastest.
+
 5) Fill in the body of `my_random_double` to generate random doubles,
 rather than floats.  Test it to see if it
 returns numbers uniformly distributed from 0 to 1.
 
 6) Modify `time_rand.c` to compare `my_random_double` and
 `random_double`.  Which is faster?
+
+Not surprisingly, `random_double` is faster.
 
 7) Check in your modified version of `rand.c` and `time_rand.c`.
 
